Added favicon, just for fun

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Coming soon...
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>TheDarkBug</title>
+		<link
+			rel="icon"
+			type="image/png"
+			href="https://thedarkbug.github.io/favicon.png"
+		/>
+	</head>
+	<body>
+		<p>Coming soon...</p>
+	</body>
+</html>
