--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 		<title>TheDarkBug</title>
 		<link rel="icon" type="image/png" href="favicon.png" />
 		<link rel="stylesheet" href="style.css" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+		/>
+
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 		<meta charset="UTF-8" />
 		<script>
 			if (typeof document.onselectstart != "undefined") {
@@ -18,52 +24,44 @@
 		</script>
 	</head>
 	<body>
-		<!-- <h1></h1> -->
-		<h1>
-			<span
-				class="txt-rotate"
-				data-period="2000"
-				data-rotate='["Coming soon..."]'
-			></span>
-		</h1>
-		<button onclick="wipalert()">Test</button>
-		<script>
-			var TxtRotate = function (el, toRotate, period) {
-				this.toRotate = toRotate;
-				this.el = el;
-				this.loopNum = 0;
-				this.txt = "";
-				this.tick();
-			};
+		<h1>Coming soon...</h1>
+		<button onclick="window.location.href='projects.html';">
+			My Projects
+		</button>
 
-			TxtRotate.prototype.tick = function () {
-				var i = this.loopNum % this.toRotate.length;
-				var fullTxt = this.toRotate[i];
-
-				this.txt = fullTxt.substring(0, this.txt.length + 1);
-
-				this.el.innerHTML =
-					'<span class="wrap">' + this.txt + "</span>";
-
-				var that = this;
-				var delta = 300 - Math.random() * 200;
-				setTimeout(function () {
-					that.tick();
-				}, delta);
-			};
-
-			window.onload = function () {
-				var elements = document.getElementsByClassName("txt-rotate");
-				var txtRot = new TxtRotate(
-					elements[0],
-					JSON.parse(elements[0].getAttribute("data-rotate"))
-				);
-				var css = document.createElement("style");
-				css.type = "text/css";
-				css.innerHTML =
-					".txt-rotate > .wrap { border-right: 0.08em solid #666 }";
-				document.body.appendChild(css);
-			};
-		</script>
+		<!-- footer -->
+		<footer class="page-footer">
+			<div class="container">
+				<div class="row">
+					<div class="col l6 s12">
+						<h5 class="white-text">TheDarkBug</h5>
+						<p class="grey-text text-lighten-4">
+							This website was entirely made by Adriano Oliviero.
+						</p>
+					</div>
+					<div class="col l4 offset-l2 s12">
+						<h6 class="white-text">Links</h6>
+						<ul>
+							<li>
+								<a
+									class="grey-text text-lighten-3"
+									href="https://github.com/TheDarkBug"
+									>My github</a
+								>
+								<i class="3d_rotation"></i>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="footer-copyright">
+				<div class="container">
+					This website is provided under the
+					<a class="grey-text text-lighten-4 center" href="LICENSE.md"
+						>GPL-3 license</a
+					>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
