Removed useless javascript calls

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <header>
     <nav>
       <ul>
-        <div><li><a href="/" class="nav-link">Home</a></li></div>
-        <script type="text/javascript">active_page();</script>
+        <li><a href="/" class="nav-link">Home</a></li>
         <li><a href="/bfli/bfli.html" class="nav-link">BFLI</a></li>
         <script type="text/javascript">active_page();</script>
       </ul>
