--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section>
     <h2>Some info about me</h2>
     <p>I am a <script type="text/javascript">get_age();</script> years old engeneering student at Federico II university.
-      In my spare time i like to write C code, but i know also other languages such as python, brainfuck and C++.</p>
+      In my spare time i like to write C code, but i know also other languages such as python, C++, rust and brainfuck.</p>
     <br>
     <h2>My development environment</h2>
     <div>
