--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="/" class="nav-link">Home</a></li>
                 <li><a href="/bfli/bfli.html" class="nav-link">BFLI</a></li>
                 <script type="text/javascript">
-                    active_page();
+                    activate_page();
                 </script>
             </ul>
         </nav>
@@ -62,7 +62,8 @@
             <li><a href="" target="_blank">Github</a></li>
         </ul>
         <div>Icons made by <a href="https://www.flaticon.com/authors/juicy-fish" title="juicy_fish">juicy_fish</a>, <a href="https://www.freepik.com" title="Freepik">Freepik</a>, <a href="https://www.flaticon.com/authors/winnievinzence" title="winnievinzence">winnievinzence</a>,
-            <a href="https://www.flaticon.com/authors/fauzidea" title="FauzIDEA">FauzIDEA</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+            <a href="https://www.flaticon.com/authors/fauzidea" title="FauzIDEA">FauzIDEA</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
+        </div>
     </footer>
 </body>
 
