--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>I am a
             <script type="text/javascript">
                 get_age();
-            </script> years old engeneering student at Federico II university. In my spare time i like to write C, but i know also other languages such as python, C++, rust and brainfuck.
+            </script> years old engeneering student at Federico II university. In my spare time i like to write C, but i know also other languages such as Python, C++, Rust and BrainFuck.
         </p>
         <br>
         <h2>My development environment</h2>
