Started bootstrap migration

--- a/index.html
+++ b/index.html
@@ -2,69 +2,43 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TheDarkBug</title>
-    <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <script src="index.js"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+  <title>Adriano Oliviero</title>
 </head>
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/" class="nav-link">Home</a></li>
-                <li><a href="/bfli/bfli.html" class="nav-link">BFLI</a></li>
-                <script type="text/javascript">
-                    activate_page();
-                </script>
-            </ul>
-        </nav>
-        <hr>
-        <h1 class="write_slowly">TheDarkBug</h1>
-    </header>
-    <section>
-        <h2>Some info about me</h2>
-        <p>I am a
-            <script type="text/javascript">
-                get_age();
-            </script> years old engeneering student at Federico II university. In my spare time i like to write C, but i know also other languages such as Python, C++, Rust and BrainFuck.
-        </p>
-        <br>
-        <h2>My development environment</h2>
-        <div>
-            <img src="icons/operating-system.png" width="20"><strong>Operating system:</strong><span> Arch Linux / (sadly)
-        Windows 11</span>
-            <br>
-            <img src="icons/text-editor.png" width="20"><strong>Text editor:</strong><span> VScode / VIM</span>
-            <br>
-            <img src="icons/desktop-environment.png" width="20"><strong>Desktop environment:</strong><span> BSPWM</span>
-            <br>
-            <img src="icons/browser.png" width="20"><strong>Browser:</strong><span> Waterfox</span>
-        </div>
-    </section>
-    <br>
-    <footer>
-        <h3>Contacts</h3>
-        <ul>
-            <li>
-                <h4>Emails</h4>
-                <ul>
-                    <li><a href="" target="_blank">Protonmail</a></li>
-                    <li><a href="" target="_blank">Gmail</a></li>
-                </ul>
-            </li>
-            <li><a href="" target="_blank">Element</a></li>
-            <li><a href="" target="_blank">Telegram</a></li>
-            <li><a href="" target="_blank">Reddit</a></li>
-            <li><a href="" target="_blank">Github</a></li>
-        </ul>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/juicy-fish" title="juicy_fish">juicy_fish</a>, <a href="https://www.freepik.com" title="Freepik">Freepik</a>, <a href="https://www.flaticon.com/authors/winnievinzence" title="winnievinzence">winnievinzence</a>,
-            <a href="https://www.flaticon.com/authors/fauzidea" title="FauzIDEA">FauzIDEA</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
-        </div>
-    </footer>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/bfli/bfli.html">Bfli</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
