--- a/bfli/bfli.html
+++ b/bfli/bfli.html
@@ -1,41 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/style.css">
-    <script src="/index.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+
     <script src="bfli.js"></script>
+
     <title>BFLI</title>
-</head>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/">Navbar</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="/" class="nav-link">Home</a></li>
-                <li><a href="/bfli/bfli.html" class="nav-link">BFLI</a></li>
-                <script type="text/javascript">
-                    activate_page();
-                </script>
-            </ul>
-        </nav>
-        <hr>
-        <h1>Brainfuck live interpreter (and compiler)</h1>
-        <textarea id="user_input" placeholder="Insert some brainfuck code here"></textarea>
-        <br>
-        <br>
-        <div class="exec_btn_div">
-            <button onclick="bfli_main(document.getElementById('user_input').value)" class="exec_btn">Execute</button>
-        </div>
-        <br>
-        <div class="bfli_out_div">
-            <span class="tooltiptext">Click to copy the output</span>
-            <p id="bfli_out" onclick="navigator.clipboard.writeText(textContent)"></p>
-        </div>
-</body>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/bfli/bfli.html">Bfli<span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+      </div>
+      <form class="form-inline my-2 my-lg-0">
+        <a
+          class="nav-link"
+          href="https://github.com/TheDarkBug/brainfuck-live-interpreter"
+          rel="noopener noreferrer"
+          target="_blank"
+        >
+          <img src="https://www.svgrepo.com/download/473620/github.svg" width="30" height="30" alt="Open on github" />
+        </a>
+      </form>
+    </nav>
+    <div class="d-flex justify-content-between">
+      <div style="width: 100%; height: 100%; padding: 10px">
+        <textarea
+          id="user_input"
+          class="form-control"
+          type="text"
+          rows="5"
+          placeholder="Brainfuck Source Code"
+        ></textarea>
+      </div>
+      <div style="width: 100%; height: 100%; padding: 10px">
+        <textarea
+          id="bfli_out"
+          class="form-control"
+          type="text"
+          rows="5"
+          placeholder="Output will be displayed here..."
+          onclick="navigator.clipboard.writeText(textContent)"
+          readonly
+          data-toggle="tooltip"
+          data-placement="bottom"
+          title="Click to copy the output"
+        ></textarea>
+      </div>
+    </div>
 
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
