--- a/bfli/index.html
+++ b/bfli/index.html
@@ -3,21 +3,49 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <!-- Bootstrap CSS -->
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="/style.css" />
     <script src="/global.js"></script>
-    <title>Adriano Oliviero</title>
-  </head>
+    <script src="bfli.js"></script>
 
+    <title>Brainfuck Live Interpreter</title>
+  </head>
   <body>
     <div id="navbar_placeholder"></div>
-    <main></main>
+    <main>
+      <div class="d-flex justify-content-between">
+        <div style="width: 100%; height: 100%; padding: 10px">
+          <textarea
+            id="user_input"
+            class="form-control"
+            type="text"
+            rows="5"
+            placeholder="Brainfuck Source Code"
+          ></textarea>
+        </div>
+        <div style="width: 100%; height: 100%; padding: 10px">
+          <textarea
+            id="bfli_out"
+            class="form-control"
+            type="text"
+            rows="5"
+            placeholder="Output will be displayed here..."
+            onclick="navigator.clipboard.writeText(textContent)"
+            readonly
+            data-toggle="tooltip"
+            data-placement="bottom"
+            title="Click to copy the output"
+          ></textarea>
+        </div>
+      </div>
+    </main>
     <div id="footer_placeholder"></div>
 
     <script
