--- a/bfli/index.html
+++ b/bfli/index.html
@@ -1,19 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-
-    <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/style.css" />
+    <script src="/global.js"></script>
     <script src="bfli.js"></script>
-
     <title>Brainfuck Live Interpreter</title>
   </head>
   <body>
@@ -28,6 +17,7 @@
             type="text"
             rows="5"
             placeholder="Brainfuck Source Code"
+            style="resize: none"
           ></textarea>
         </div>
         <div style="width: 100%; height: 100%; padding: 10px">
@@ -41,9 +31,24 @@
             readonly
             data-toggle="tooltip"
             data-placement="bottom"
+            style="resize: none"
             title="Click to copy the output"
           ></textarea>
         </div>
+      </div>
+      <div class="container dropdown-center" style="display: flex; flex-direction: column">
+        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Examples
+        </button>
+        <ul class="dropdown-menu">
+          <li>
+            <a
+              class="dropdown-item"
+              onClick="document.getElementById('user_input').innerHTML='++++++++++[>+++++++>++++++++++>++<<<-]>++.>+.<<+++[>>++<<-]>>+..+++.>.<<<+++++[>+++<-]>.>.+++.------.--------.><<<++++[>>>+++<<<-]>>>+.'"
+              >Hello World</a
+            >
+          </li>
+        </ul>
       </div>
     </main>
     <div id="footer_placeholder"></div>
