--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-
-    <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="/style.css" />
     <script src="/global.js"></script>
     <title>Adriano Oliviero</title>
   </head>
 
   <body>
     <div id="navbar_placeholder"></div>
-    <main></main>
+    <main>
+      <h1 style="text-align: center">Some info about me</h1>
+      <div class="container">
+        <p>
+          I am a
+          <script>
+            document.writeln(Math.trunc((new Date().getTime() / 1000 - 1038006000) / 31709800));
+          </script>
+          years old engeneering student at Federico II university. In my spare time i like to write C, but i know also
+          other languages such as Python, C++, Rust and BrainFuck.
+        </p>
+      </div>
+    </main>
     <div id="footer_placeholder"></div>
 
     <script
