--- a/head.html
+++ b/head.html
@@ -6,6 +6,6 @@
   integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
   crossorigin="anonymous"
 />
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=JetBrains+Mono" />
 <link rel="shortcut icon" href="/icons/favicon.png" type="image/x-icon" />
 <link rel="stylesheet" href="/style.css" />
