Updated unitconverter play store link

--- a/privacy-policy/unitconverter.html
+++ b/privacy-policy/unitconverter.html
@@ -34,7 +34,7 @@
 	<br>
 	<li class="dist-item"><a href="https://github.com/TheDarkBug/unitconverter">Github</a></li>
 	<br>
-	<li class="dist-item"><a href="https://play.google.com/store/apps/details?id=com.tdb.unitconverter">Google play store</a></li>
+	<li class="dist-item"><a href="https://play.google.com/store/apps/details?id=com.thedarkbug.unit_converter">Google play store</a></li>
 	<br>
 	<h1>Privacy policy</h1>
 	<p>At Unit Converter, we do not collect any personal information from our users.</p>
