--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <a class="navbar-brand" href="/" style="font-family: JetBrains Mono">TheDarkBug</a>
+  <a class="navbar-brand" href="/" style="font-family: JetBrains Mono">Adriano Oliviero</a>
   <button
     class="navbar-toggler"
     type="button"
