Updated unitconverter privacy-policy

--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
   <section class="mb-4">
     <a
       class="btn text-white btn-floating m-1"
-      href="https://github.com/TheDarkBug"
+      href="https://github.com/ad-oliviero"
       rel="noopener noreferrer"
       target="_blank"
       role="button"
